fix: % instead of fixed px

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=1440, initial-scale=1.0">
+  <meta name="viewport" content="width=100%, initial-scale=1.0">
   <link rel="stylesheet" href="master.css">
   <title>NeuerEnergy Demo</title>
 </head>
 
 <body class="content">
-  <iframe width="1440" height="996" src="https://xd.adobe.com/embed/01d500c7-096d-4f3d-6601-3bc9bf07dbe2-77e4/"
+  <iframe width="100%" height="100%" src="https://xd.adobe.com/embed/01d500c7-096d-4f3d-6601-3bc9bf07dbe2-77e4/"
     frameborder="0"></iframe>
 </body>
 
