fix: other fixes for better presentation

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=100%, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="master.css">
-  <title>NeuerEnergy Demo</title>
+
 </head>
 
-<body class="content">
+<body>
   <iframe width="100%" height="100%" src="https://xd.adobe.com/embed/01d500c7-096d-4f3d-6601-3bc9bf07dbe2-77e4/"
     frameborder="0"></iframe>
 </body>
